force-app/main/default/objects/Ship_To_Address__c/Ship_To_Address__c.object-meta.xml
<CustomObject>
    <label>Ship To Address</label>
    <nameField>
        <label>Ship To Address</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ship To Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>