force-app/main/default/objects/Ship_To_Address__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ship To Addresses</relationshipLabel>
    <relationshipName>Ship_To_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>