force-app/main/default/objects/Ship_To_Address__c/fields/Ship_To_City__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_City__c</fullName>
    <label>Ship To City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>