force-app/main/default/objects/Ship_To_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Ship_To_City__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>